day5/vpc create/subnet.tf
locals {
  staging_env = "staging"
  az = "ap-south-1a"
}

#create VPC
resource "aws_vpc" "staging-vpc" {
cidr_block = "10.0.0.0/16"
enable_dns_support = "true" #gives you an internal domain name
enable_dns_hostnames = "true" #gives you an internal host name
instance_tenancy = "default"  
tags = {

        Name = "${local.staging_env}-vpc"
}        

}
# create subnet
resource "aws_subnet" "public_subnet" {
  vpc_id = aws_vpc.staging-vpc.id
  cidr_block = "10.0.0.0/16"
  availability_zone = "${local.az}"
  map_public_ip_on_launch = true
  tags = {
    Name = "public-subnet"
  }
}
resource "aws_subnet" "private_subnet" {
  vpc_id = aws_vpc.staging-vpc.id
  cidr_block = "10.210.3.0/24"
  availability_zone = "${local.az}"
  map_public_ip_on_launch = true

  tags = {
    Name = "private-subnet"
  }
}
# create internet getway
resource "aws_internet_gateway" "staging-igw"{
vpc_id = aws_vpc.staging-vpc.id
tags = {
  Name = "${local.staging_env}-igw"
}
}
### Create Custom Route Table
resource "aws_route_table" "staging_route-tb" {
  vpc_id = aws_vpc.staging-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.staging-igw.id
  }
}
#### associate route table to private subnet
resource "aws_route_table_association" "staging-private-route-tb-associate" {
       subnet_id = "${aws_subnet.private_subnet.id}"
       route_table_id = "${aws_route_table.staging_route-tb.id}" 
}

#### associate route table to public subnet
resource "aws_route_table_association" "staging-public-route-tb-associate" {
       subnet_id = "${aws_subnet.public_subnet.id}"
       route_table_id = "${aws_route_table.staging_route-tb.id}" 
}
# aws instance 
resource "aws_instance" "create-ec2" {
ami = "ami-0287a05f0ef0e9d9a"
instance_type = "t2.micro"
subnet_id = aws_subnet.public_subnet.id
availability_zone = "${local.az}"
tags = {
        Name = "${local.staging_env}-create-ec2"
} 
}
